Bug 73408 - OpenCL software interpreter setting does not stick in the dialog
Summary: OpenCL software interpreter setting does not stick in the dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.1 rc
Hardware: Other All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.1
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-08 19:41 UTC by Kohei Yoshida
Modified: 2014-01-09 17:50 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2014-01-08 19:41:33 UTC
1. Go to Tools - Options - Calc - Formula.
2. Set the Detailed calculation settings to Custom, and click Details to open the details dialog.
3. Enable OpenCL calculation by setting it to True, then set the automatic selection of platform/device to False.
4. Select "Internal, software interpreter" as the device.
5. Click OK to dismiss the dialog.
6. Now, back to the main Options dialog, click Details again to open the same dialog.
7. When you go back to the OpenCL setting, the "Internal, software interpreter" is no longer selected. In fact, no devices are selected. But the software interpreter should be selected on re-opening of this dialog.
Comment 1 Kohei Yoshida 2014-01-08 19:41:56 UTC
Confirming and taking it.
Comment 2 Commit Notification 2014-01-08 19:45:00 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4b5a98942cd3ebcdacd4d66fb2bd61211fcfe7bc

fdo#73408: Make the software interpreter selection stick in the UI.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Kohei Yoshida 2014-01-08 19:46:15 UTC
Cherry-pick request for 4.2 is underway: https://gerrit.libreoffice.org/#/c/7323/
Comment 4 Commit Notification 2014-01-09 05:01:05 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ea38aead924caeae9d51dec5246fef27f4fa456e&h=libreoffice-4-2

fdo#73408: Make the software interpreter selection stick in the UI.


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Kohei Yoshida 2014-01-09 17:50:36 UTC
fixed.