fdo#73408: Make the software interpreter selection stick in the UI.

Change-Id: I136a98fadbde82a7a585df9a5691f884c0362699
(cherry picked from commit 4b5a98942cd3ebcdacd4d66fb2bd61211fcfe7bc)